# os-chatbot

./: .gitignore  CLAUDE.md  Dockerfile.frontend  Dockerfile.retrieval  Dockerfile.server  README.md  TODO-EXTRA.md  TODO.md  cagtest.py  compose-app.yaml  compose-frontend.yaml  compose-retrieval.yaml  compose-server.yaml  compose.yaml  frontend.Dockerfile  pyproject.toml  server.Dockerfile
frontend/: app.py  chat.py  debug.py  pyproject.toml  sidebar.py  start.sh  state.py
frontend/src/: Chat.jsx
inference/: Dockerfile.vllm  Dockerfile.vllm-gpt-oss-120b  compose-vllm-gpt-oss-120b.yaml  compose.yaml  docker-compose.yaml  inference.sh  requirements.txt  vllm.Dockerfile
ingestion/: chunks_course_pages.jsonl  chunks_video_transcripts.jsonl  ingest.py  ingest_to_qdrant.py  move_transcripts.py  preprocess.py  preprocess_course_pages.py  preprocess_semantic.py  process_course_pages.py  process_raw_transcripts.py  process_video_transcripts.py  processed_chunks.jsonl  requirements.txt  scrape_course_pages.py  scrape_knowledge.py
ingestion/knowledge/: os.css  (+1 more)
retrieval/: memory.py  requirements.txt  server.py  start.sh
server/: admin.py  collection_types.py  embedder.py  intent.py  memory.py  prompt.py  pyproject.toml  requirements-extra.txt  requirements.txt  retrieval.py  server.py  settings.py  settings.toml  start.sh
server/db/: __init__.py  base.py  qdrant_db.py  weaviate_db.py
tests/: 64.txt  run-tests.sh  test_prompt.txt  tests.py  tests.seq.py  tests2.py
utils/: config.py  naming.py  pyproject.toml
vectordb/: check_contents.sh  compose.yaml  prune.sh
(+860 files in other folders)
